--- a/.env.demo
+++ b/.env.demo
@@ -1,3 +1,3 @@
-CLIENT_ID="twitch-app-client-id"
-CLIENT_SECRET="twitch-app-client-secret"
-BASE_URL="web-base-url"
+CLIENT_ID=twitch-app-client-id
+CLIENT_SECRET=twitch-app-client-secret
+BASE_URI="web-base-url"
